2005-07-16  Bruno Haible  <bruno@clisp.org>

        * msgcat-stringtable-1: Filter out warning message from output.

2005-05-27  Bruno Haible  <bruno@clisp.org>

	* msgcat-stringtable-1: Expect \v or \a escape sequence in output.
	* xgettext-csharp-3: Likewise.
	* xgettext-java-2: Likewise.
	* xgettext-python-1: Likewise.

2005-05-05  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (LDADD_yes, LDADD_no): Add @LTLIBTHREAD@.

2005-05-01  Bruno Haible  <bruno@clisp.org>

	* xgettext-sh-4: New file.
	* Makefile.am (TESTS): Add it.

2005-03-20  Bruno Haible  <bruno@clisp.org>

	* gettext-6: New file.
	* gettext-6-prg.c: New file.
	* gettext-6-1.po: New file.
	* gettext-6-2.po: New file.
	* gettext-7: New file.
	* gettext-7-prg.c: New file.
	* gettext-7.po: New file.
	* Makefile.am (TESTS): Add gettext-6, gettext-7.
	(EXTRA_DIST): Add gettext-6-1.po, gettext-6-2.po, gettext-7.po.
	(noinst_PROGRAMS): Add gettext-6-prg, gettext-7-prg.
	(gettext_6_prg_SOURCES, gettext_6_prg_CFLAGS, gettext_6_prg_LDADD): New
	variables.
	(gettext_7_prg_SOURCES, gettext_7_prg_CFLAGS, gettext_7_prg_LDADD): New
	variables.

2005-03-19  Bruno Haible  <bruno@clisp.org>

	* gettext-3: New file.
	* gettext-3-prg.c: New file.
	* gettext-3-1.po: New file, taken from glibc.
	* gettext-3-2.po: New file, taken from glibc.
	* gettext-4: New file.
	* gettext-4-prg.c: New file.
	* gettext-4-po: New file, taken from glibc.
	* gettext-5: New file.
	* gettext-5-prg.c: New file.
	* gettext-5-po: New file, taken from glibc.
	* Makefile.am (TESTS): Add gettext-3, gettext-4, gettext-5.
	(EXTRA_DIST): Add gettext-3-1.po, gettext-3-2.po, gettext-4.po,
	gettext-5.po.
	(noinst_PROGRAMS): Add gettext-3-prg, gettext-4-prg, gettext-5-prg.
	(gettext_3_prg_SOURCES, gettext_3_prg_LDADD): New variables.
	(gettext_4_prg_SOURCES, gettext_4_prg_LDADD): New variables.
	(gettext_5_prg_SOURCES, gettext_5_prg_LDADD): New variables.

2005-05-23  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.5 released.
